--- a/PaginasHTML/formulariopost/index.html
+++ b/PaginasHTML/formulariopost/index.html
@@ -7,10 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <!-- <link href="css/styles.css" rel="stylesheet"> -->
     <title>Formulario POST</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+        form {
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        form label {
+            margin-bottom: 5%;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,7 +47,7 @@
                 </ul>
             </div>
         </div>
-        <form action="http://localhost/" method="post">
+        <form action="http://laminaverde.com/" method="post">
             <div class="row">
                 <div class="col">
 
@@ -43,7 +55,7 @@
                     <!-- Note that the name attribute is mandatory for all form fields -->
                     <label>
                         <span>Username</span>
-                        <input name="username" value="Default" required>
+                        <input id="username" name="username" value="Default" required>
                     </label>
                 </div>
             </div>
@@ -51,7 +63,7 @@
                 <div class="col">
                     <label>
                         <span>Password</span>
-                        <input name="password" type="password" required>
+                        <input id="password"  name="password" type="password" required>
                     </label>
                 </div>
             </div>
@@ -59,14 +71,14 @@
                 <div class="col">
                     <label>
                         <span>Email</span>
-                        <input name="email" type="email" value="hello@mail.com" required>
+                        <input id="email" name="email" type="email" value="hello@mail.com" required>
                     </label>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <label>
-                        <input name="redes" type="checkbox">
+                        <input id="redes" name="redes" type="checkbox">
                         <span>¿Repitiendo redes?</span>
                     </label>
                 </div>
@@ -77,11 +89,47 @@
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <script src="js/index.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+    <!-- <script src="js/index.js"></script> -->
+    <script>
+        addEventListener('DOMContentLoaded', onloadCb);
 
+        // This callback will be executed when the page initially loads.
+        // See line 1 to know why
+        function onloadCb() {
+            // Grab all forms which have a method attribute
+            const forms = document.querySelectorAll('form[method]');
+
+            // Display info of any submitted form
+            forms.forEach(function (form) {
+                form.addEventListener('submit', displayInfo);
+            });
+        };
+
+        function displayInfo(event) {
+            // Prevent the page from redirecting to the action attribute.
+            event.preventDefault();
+
+            // Get the form data
+            const formData = new FormData(event.target);
+
+            logAsTitle('Data:');
+            for (let [key, val] of formData.entries()) {
+                console.log(`${key} \t ${val || '<Empty>'}`);
+            }
+
+            logAsTitle('Form attributes');
+            const neededAttributes = ['action', 'method', 'enctype'];
+            for (let attr of neededAttributes) {
+                console.log(`${attr} - ${event.target[[attr]] || '<empty>'}`);
+            }
+        }
+
+        function logAsTitle(str) {
+            console.log('\n' + str);
+            console.log('='.repeat(str.length));
+        }
+    </script>
 </body>
 
 </html>
